--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="hero">
             <div class="container">
                 <h2>Welcome to My Portfolio</h2>
-                <p>Showcasing my work in AI, NLP, and software engineering.</p>
+                <p>Showcasing my work in AI, NLP, software engineering and games.</p>
                 <a href="#projects" class="cta-button">See My Work</a>
             </div>
         </section>
@@ -66,6 +66,31 @@
                                 <li>Deployed on AWS EC2 with Docker and set up CI/CD pipelines using GitHub Actions.</li>
                             </ul>
                             <a href="https://github.com/iseriomer/Chainlit-RAG-Project" class="project-button" target="_blank">View Details</a>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="combat-craze.png" alt="Combat Craze">
+                        <div class="project-info">
+                            <h3>Combat Craze</h3>
+                            <p>April-May 2024</p>
+                            <ul>
+                                <li>Developed a thrilling roguelike, fast-paced movement FPS game using Unity3D, where every moment is a fight for survival.</li>
+                                <li>Designed diverse enemies such as shambling undead, explosive flying bombs, menacing aerial bombers, and relentless machine gun drones.</li>
+                                <li>Implemented a scoring system to unlock powerful perks, weapons, and upgrades, adding a strategic layer to the gameplay.</li>
+                            </ul>
+                            <a href="https://pandlebury.itch.io/combat-craze" class="project-button" target="_blank">View Details</a>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="neon-ascent.jpg" alt="Neon Ascent">
+                        <div class="project-info">
+                            <h3>Neon Ascent</h3>
+                            <p>April-May 2024</p>
+                            <ul>
+                                <li>Created a 2D platformer game with pixel art aesthetics and a high-score challenge, playable on HTML5 and Android platforms.</li>
+                                <li>Released an updated Android version with improved features, leveraging player feedback to refine game mechanics.</li>
+                            </ul>
+                            <a href="https://pandlebury.itch.io/neon-jump" class="project-button" target="_blank">View Details</a>
                         </div>
                     </div>
                 </div>
